objects/Instances__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Domain__c</fullName>
        <description>Used for instances with &quot;My&quot; domains such as &quot;companyname.my.salesforce.com&quot;</description>
        <inlineHelpText>Used for instances with &quot;My&quot; domains such as &quot;companyname.my.salesforce.com&quot;</inlineHelpText>
        <label>Custom Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_Name__c</fullName>
        <label>Instance Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_ALM_Instance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this is the instance in which the ALM package is installed</inlineHelpText>
        <label>Is ALM Instance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rename_Lock_Expiration_Time__c</fullName>
        <inlineHelpText>The timestamp of the expiration of the renaming lock.</inlineHelpText>
        <label>Rename Lock Expiration Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rename_Lock__c</fullName>
        <inlineHelpText>The timestamp of when this record was locked for renaming.</inlineHelpText>
        <label>Rename Lock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production / Developer</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Instance</label>
    <nameField>
        <label>Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>test</fullName>
        <active>false</active>
        <errorConditionFormula>true</errorConditionFormula>
        <errorMessage>tttttttt</errorMessage>
    </validationRules>
</CustomObject>